--- a/form.html
+++ b/form.html
@@ -36,9 +36,9 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="http://54.38.191.163:3000">Meteor</a>
-                <a class="dropdown-item" href="54.38.191.163">VueJS</a>
-                <a class="dropdown-item" href="54.38.191.163">AngularJS</a>
-                <a class="dropdown-item" href="54.38.191.163">AngularJS</a>
+                <a class="dropdown-item" href="http://54.38.191.163:8017">VueJS</a>
+                <a class="dropdown-item" href="https://angularjssite.stackblitz.io/">AngularJS</a>
+                <a class="dropdown-item" href="http://54.38.191.163:3001">ReactJS</a>
               </div>
             </li>
           </ul>
